数组矩阵编写

--- a/408数据结构/Note/栈,队列.md
+++ b/408数据结构/Note/栈,队列.md
@@ -10,9 +10,9 @@
   - 栈底：固定的,不允许进行插入和删除的另一端
   - 空栈：不含任何元素的空表
 
-假设某个栈 $S=(a_1,a_2,a_3,a_4,a_5)$,则 $a_1$ 为栈底元素,$a_5$ 为栈顶元素.由于栈只能在栈顶进行插入和删除操作,进栈次序依次为 $(a_1,a_2,a_3,a_4,a_5)$，而出栈次序为 $(a_5,a_4,a_3,a_2,a_1)$.由此可见,栈的操作特性可以明显地概括为**后进先出** $(Last \ In \ First \ Out, LIFO)$.
+假设某个栈 $S=(a_1,a_2,a_3,a_4,a_5)$,则 $a_1$ 为栈底元素,$a_5$ 为栈顶元素.由于栈只能在栈顶进行插入和删除操作,进栈次序依次为 $(a_1,a_2,a_3,a_4,a_5)$,而出栈次序为 $(a_5,a_4,a_3,a_2,a_1)$.由此可见,栈的操作特性可以明显地概括为**后进先出** $(Last \ In \ First \ Out, LIFO)$.
 
-> 栈的数学性质:$n$个不同元素进栈，出栈元素不同排列的个数为$\frac{1}{n+1}C_{2n}^n$.上述公式称为**卡特兰数**.
+> 栈的数学性质:$n$个不同元素进栈,出栈元素不同排列的个数为$\frac{1}{n+1}C_{2n}^n$.上述公式称为**卡特兰数**.
 
 ## 栈的实现
 
@@ -79,8 +79,8 @@ void InitStack(SqStack &S)
 
 #### 判断栈空
 
-- 对于顺序栈，当`top == -1`时为空栈
-- 对于链栈，当`top`所指元素为 `NULL` 时为空栈
+- 对于顺序栈,当`top == -1`时为空栈
+- 对于链栈,当`top`所指元素为 `NULL` 时为空栈
 
 ```c++
 bool StackEmpty(SqStack &S)
@@ -104,7 +104,7 @@ bool Push(SqStack &S, int x)
 }
 ```
 
-> 在栈初始化时也可让`top == MaxSize`，每次插入元素时，`top` 向低地址方向移动，即"栈从高地址向低地址增长".进程在虚拟地址空间中所拥有的栈区就是从高地址向低地址增长.
+> 在栈初始化时也可让`top == MaxSize`,每次插入元素时,`top` 向低地址方向移动,即"栈从高地址向低地址增长".进程在虚拟地址空间中所拥有的栈区就是从高地址向低地址增长.
 
 #### 出栈
 
@@ -120,7 +120,7 @@ int Pop(SqStack &S, int x)
 
 #### 栈满
 
-当 `top` 指针等于 `MaxSize - 1` 的位置，栈就是一个满栈
+当 `top` 指针等于 `MaxSize - 1` 的位置,栈就是一个满栈
 
 ```c++
 bool StackEmpty(SqStack &S)
@@ -179,7 +179,7 @@ bool pop(LinkStack &S)
 ### 共享栈
 
 ![20231218213245](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231218213245.png)
-将两个栈放在同一段存储空间中，分别让两个栈从两端开始往中间增长，这种栈被称为共享栈.
+将两个栈放在同一段存储空间中,分别让两个栈从两端开始往中间增长,这种栈被称为共享栈.
 
 # 队列
 
@@ -198,7 +198,7 @@ bool pop(LinkStack &S)
 
 ### 顺序队列
 
-采用顺序存储结构的队列称为顺序队列，它利用一组地址连续的存储单元存放整个队列的数据元素，并且使用队头指针`front`和队尾指针`rear`定位队头和队尾,**队头指针 `front` 指向队头元素,队尾指针`rear`指向队尾元素的下一个位置**(不同教材对 front 和 rear 的定义可能不同).顺序队列的结构定义如下:
+采用顺序存储结构的队列称为顺序队列,它利用一组地址连续的存储单元存放整个队列的数据元素,并且使用队头指针`front`和队尾指针`rear`定位队头和队尾,**队头指针 `front` 指向队头元素,队尾指针`rear`指向队尾元素的下一个位置**(不同教材对 front 和 rear 的定义可能不同).顺序队列的结构定义如下:
 
 ```c++
 #define MaxSize 100 // 定义队列中元素的最大个数
@@ -210,17 +210,17 @@ typedef struct
 ```
 
 - **初始状态:`Q.front = Q.rear = 0`**
-- **进队操作:队不满时,先送值到队尾元素，再将队尾指针加 1**
-- **出队操作:队不满时，先取队头元素值，再将队头指针加 1**
+- **进队操作:队不满时,先送值到队尾元素,再将队尾指针加 1**
+- **出队操作:队不满时,先取队头元素值,再将队头指针加 1**
 
 ![20231219093702](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231219093702.png)
-从上面的进队和出队操作可以看到不能使用`Q.rear==MaxSize`.但是在上面的 d 图中，队列中仅有一个元素，但是依然满足上述条件.因此这时叫做"假溢出".因此为了解决这个问题需要使用循环队列来解决.
+从上面的进队和出队操作可以看到不能使用`Q.rear==MaxSize`.但是在上面的 d 图中,队列中仅有一个元素,但是依然满足上述条件.因此这时叫做"假溢出".因此为了解决这个问题需要使用循环队列来解决.
 
 ### 链式队列
 
 ![20240413164408](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240413164408.png)
 ![20240413164745](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240413164745.png)
-队列可由队头指针和队尾指针代表整个链表，因此将队头指针和队尾指针放入一个结构体用来表示队列.
+队列可由队头指针和队尾指针代表整个链表,因此将队头指针和队尾指针放入一个结构体用来表示队列.
 
 ```c++
 typedef struct LinkNode // 链队列的结点
@@ -282,7 +282,7 @@ bool DeQueue(LinkQueue &Q)
 	LinkNode *p = Q.front->next;
 	Q.front->next = p->next;
 	if (Q.rear == p)
-		Q.rear = Q.front; // 若原队列中只有以歌结点，删除后变空
+		Q.rear = Q.front; // 若原队列中只有以歌结点,删除后变空
 	free(p);
 	return true;
 }
@@ -294,8 +294,8 @@ bool DeQueue(LinkQueue &Q)
 
 #### 循环队列的定义
 
-- 为了解决上面队列的"假溢出"的情况，可以使用循环队列的方式来解决.
-- 即把存储队列元素的表从逻辑上视为一个环，称为循环队列.
+- 为了解决上面队列的"假溢出"的情况,可以使用循环队列的方式来解决.
+- 即把存储队列元素的表从逻辑上视为一个环,称为循环队列.
 
 ```c++
 #define MaxSize 100 // 定义队列中元素的最大个数
@@ -329,7 +329,7 @@ void InitQueue(SqQueue &Q)
 
 ##### 循环队列判空
 
-为了判断队空和队满，有三种处理方法
+为了判断队空和队满,有三种处理方法
 
 - 牺牲一个单元来区分队空和队满,入队时少用一个队列单元,这是一种较为普遍的做法,约定以"队头指针在队尾指针的下一位置作为队满的标志"
   ![20231221163619](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231221163619.png)
@@ -394,14 +394,239 @@ int CountQueue(SqQueue &Q)
 
 ## 括号匹配
 
+- 不匹配入栈
+- 匹配出栈
+
 ## 后缀求值
+
+表达式求值要解决的问题一般是输入一个字符串表示的表达式,要求输出它的值。当然也有变种比如表达式中是否包含括号,指数运算,含多少变量,判断多个表达式是否等价,等等。
+
+表达式一般需要先进行语法分析(grammer parsing)再求值,也可以边分析边求值,语法分析的作用是检查输入的字符串是否是一个合法的表达式,一般使用语法分析器(parser)解决。
+
+表达式包含两类字符：运算数和运算符。对于长度为 $n$ 的表达式,借助合适的分析方法,可以在 $O(n)$ 的时间复杂度内完成分析与求值。
+
+### 表达式树与逆波兰表达式
+
+一种递归分析表达式的方法是,将表达式当成普通的语法规则进行分析,分析后拆分成如图所示的表达式树,然后在树结构上自底向上进行运算.
+
+表达式树上进行 树的遍历 可以得到不同类型的表达式。算术表达式分为三种,分别是前缀表达式、中缀表达式、后缀表达式。中缀表达式是日常生活中最常用的表达式；后缀表达式是计算机容易理解的表达式。
+
+- 前序遍历对应前缀表达式(波兰式)
+- 中序遍历对应中缀表达式
+- 后序遍历对应后缀表达式(逆波兰式)
+
+逆波兰表达式(后缀表达式)是书写数学表达式的一种形式,其中运算符位于其操作数之后。例如,以下表达式：
+
+$$
+a+b*c*d+(e-f)*(g*h+i)
+$$
+
+可以用逆波兰表达式书写：
+
+$$
+abc*d*+ef-gh*i+*+
+$$
+
+因此,逆波兰表达式与表达式树一一对应。逆波兰表达式不需要括号表示,它的运算顺序是唯一确定的。
+
+逆波兰表达式的方便之处在于很容易在线性时间内计算。举个例子：在逆波兰表达式 $3 2 \div \times 1 -$ 中,首先计算 $3 \times 2 = 6$(使用最后一个运算符,即栈顶运算符),然后计算 $6 - 1 = 5$。可以看到：对于一个逆波兰表达式,只需要 **维护一个数字栈,每次遇到一个运算符,就取出两个栈顶元素,将运算结果重新压入栈中**。最后,栈中唯一一个元素就是该逆波兰表达式的运算结果。该算法拥有 $O(n)$ 的时间复杂度。
+
+采用递归的办法分析表达式是否成功,依赖于语法规则的设计是否合理,即,是否能够成功地得到指定的表达式树。例如：
+
+$$
+a+b*c
+$$
+
+根据加号与乘号的运算优先级不同,该中缀表达式可能转化为两种不同的表达式树。可见,语法规则的设计高度依赖于运算符的优先级。借助运算符的优先级设计相应递归的语法规则,事实上是一件不容易的事情。
+
+下文介绍的办法将运算符与它的优先级视为一个整体,采用非递归的办法,直接根据运算符的优先级来分析与计算表达式。
+
+### 只含左结合的二元运算符的含括号表达式
+
+考虑简化的问题。假设所有运算符都是二元的：所有运算符都有两个参数。并且所有运算符都是左结合的：如果运算符的优先级相等,则从左到右执行。允许使用括号。
+
+对于这种类型的中缀表达式的计算,可以将其转化为后缀表达式再进行计算。定义两个栈来分别存储运算符和运算数,每当遇到一个数直接放进运算数栈。每个运算符块对应于一对括号,运算符栈只对于运算符块的内部单调。每当遇到一个操作符时,要查找运算符栈中最顶部运算符块中的元素,在运算符块的内部保持运算符按照优先级降序进行适当的弹出操作,弹出的同时求出对应的子表达式的值。
+
+以下部分用「输出」表示输出到后缀表达式,即将该数字放在运算数栈上,或者弹出运算符和两个操作数,运算后再将结果压回运算数栈上。从左到右扫描该中缀表达式：
+
+1. 需要两个栈,结果栈 result,临时栈 temp
+2. 遇到操作数时,直接将数字入栈 result:
+3. 遇到操作符时
+   1. 若是'(',则直接入 temp 栈
+   2. 若是')'说明 temp 中一定有'('与之对应,则将 temp 栈中的所有运算符依次出栈并入栈 resut,直到遇见'('括号不会入 result 栈
+   3. 若是"+-\*/"运算符,则看当前的操作符与 temp 栈顶的运算符优先级(左$>$右),如果栈顶的运算符优先级更高,则将栈顶的运算符出栈并入栈 result 香则当前操作符入栈 temp
+4. 当中缀表达式遍历完成后,将 temp 中的操作符依次出栈并入栈 result, result 栈中从栈底到栈顶的内容就是后缀表达式
+
+具体流程(以$(2+3-1)*2-3*(8/4)$为例):
+result:`23`
+temp:`(+`
+result:`23+1`
+temp:`(-`
+result:`23+1-2`
+temp:`*`
+result:`23+1-2*`
+temp:`-`
+result:`23+1-2*3`
+temp:`-*`
+result:`23+1-2*38`
+temp:`-*(/`
+result:`23+1-2*384/`
+temp:`-*`
+result:`23+1-2*38/*-`
+temp:
+
+这种隐式使用逆波兰表达式计算表达式的值的算法的时间复杂度为 $O(n)$。通过稍微修改上述实现,还可以以显式形式获得逆波兰表达式。
+
+后缀表达式求值思路:
+将前面两个方法结合起来,中缀转后缀的过程中,每有一个 op 从 temp 栈中弹出时,都从 result 栈中弹出两个操作数 a 和 b,计算 b op a 的结果再入栈 result,最终遍历结束时 result 栈中就是计算结果。
 
 ## 递归
 
+递归是一种重要的程序设计方法。简单地说,若在一个函数、过程或数据结构的定义中又应用了它自身,则这个函数、过程或数据结构称为是递归定义的,简称递归。在计算中主要使用栈实现递归操作
+
 ## 层次遍历
+
+树层序遍历是指按照从根节点到叶子节点的层次关系,一层一层的横向遍历各个节点。根据 BFS 的定义可以知道,BFS 所得到的遍历顺序就是一种层序遍历。但层序遍历要求将不同的层次区分开来,所以其结果通常以二维数组的形式表示。
+
+例如,下图的树的层序遍历的结果是 `[[1], [2, 3, 4], [5, 6]]`(每一层从左向右)。
+![20240415140255](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240415140255.png)
+
+```c++
+vector<vector<int>> levelOrder(Node *root)
+{
+	if (!root)
+	{
+		return {};
+	}
+	vector<vector<int>> res;
+	queue<Node *> q;
+	q.push(root);
+	while (!q.empty())
+	{
+		int currentLevelSize = q.size(); // 当前层的节点个数
+		res.push_back(vector<int>());
+		for (int i = 0; i < currentLevelSize; ++i)
+		{
+			Node *cur = q.front();
+			q.pop();
+			res.back().push_back(cur->val);
+			for (Node *child : cur->children)
+			{ // 把子节点都加入
+				q.push(child);
+			}
+		}
+	}
+	return res;
+}
+```
 
 # 数组与矩阵
 
+本质是为了节省空间,使得将二维转化为一维空间
+
+## 对称矩阵
+
+- **特征:$a_{i,j}=a_{j,i}$**
+- 将$n^2 \Rightarrow \dfrac{n(n+1)}{2}$个
+
+若对一个$n$阶矩阵$A$中的任意一个元素$a$,都有$a=q$($1≤i,j≤m$),则称其为对称矩阵。
+![20240415144257](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240415144257.png)
+对于$n$阶对称矩阵,上三角区的所有元素和下三角区的对应元素相同,若仍采用二维数组存放,则会浪费几乎一半的空间,为此将$n$阶对称矩阵$A$存放在一维数组 $B[n (n+1)/2]$中,即元素$a_{i,j}$,存放在$b_k$中。比如只存放下三角部分(含主对角)的元素。
+元素 $a_{ij}$ 在数组 $B$ 中的下标 $k=1+2+\cdots+(i-1)+j-1=i(i-1)/2+j-1$(数组下标从 0 开始)对称关系如下:
+如果下标从 1 开始,并且按照行优先的存储方式,那么应该存储为如下形式:
+
+$$
+k=\begin{cases}\dfrac{i(i-1)}{2}+j-1,\quad i\geqslant j (\text{下三角区和主对角线元素})\\[2ex]\dfrac{j(j-1)}{2}+i-1,\quad i<j (\text{上三角区元素}a_{i,j}=a_{j,i})\end{cases}
+$$
+
+如果下标从 1 开始,并且按照列优先的存储方式,那么应该存储为如下形式:
+
+$$
+k=\begin{cases}\dfrac{j(j-1)}{2}+i-1,\quad i\geqslant j (\text{下三角区和主对角线元素})\\[2ex]\dfrac{i(i-1)}{2}+j-1,\quad i<j (\text{上三角区元素}a_{i,j}=a_{j,i})\end{cases}
+$$
+
+如果下标从 0 开始,并且按照行优先的存储方式,那么应该存储为如下形式:
+
+$$
+k=\begin{cases}\dfrac{i(i-1)}{2}+j,\quad i\geqslant j (\text{下三角区和主对角线元素})\\[2ex]\dfrac{j(j-1)}{2}+i,\quad i<j (\text{上三角区元素}a_{i,j}=a_{j,i})\end{cases}
+$$
+
+如果下标从 0 开始,并且按照列优先的存储方式,那么应该存储为如下形式:
+
+$$
+k=\begin{cases}\dfrac{j(j-1)}{2}+i,\quad i\geqslant j (\text{下三角区和主对角线元素})\\[2ex]\dfrac{i(i-1)}{2}+j,\quad i<j (\text{上三角区元素}a_{i,j}=a_{j,i})\end{cases}
+$$
+
+需要注意的是矩阵和一维数组的下标是从 0 开始还是从 1 开始
+
+## 三角矩阵
+
+上三角区的所有元素均为同一常量。其存储思想与对称矩阵类似,不同之处在于存储完下三角区和主对角线上的元素之后,紧接着存储对角线上方的常量一次,所以可以将$n$阶下三角矩阵$A$ 压缩存储在 $B[n(n+1)/2+1]$中
+
+$$
+\begin{bmatrix}a_{1,1}&&&\\a_{2,1}&a_{2,2}&&\\\vdots&\vdots&\ddots&\\a_{n,1}&a_{n,2}&\cdots&a_{n,n}\end{bmatrix}
+$$
+
+元素下标对称关系如下:
+
+$$
+k=\begin{cases}\dfrac{i(i-1)}{2}+j-1,&\quad i\geqslant j\text{(下三角区和主对角线元素)}\\\dfrac{n(n+1)}{2},&\quad i<j\text{(上三角区元素)}\end{cases}
+$$
+
+![20240415145518](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240415145518.png)
+
+下三角区的所有元素均为同一常量.只需存储主对角线,上三角区上的元素和下三角区的常量一次,可将其压缩存储在 $B[n(n+1)/2+1]$ 中。
+第 $1$ 行:$n$ 个元素
+第 $2$ 行:$n-1$ 个元素
+第 $i-1$ 行:$n-i+2$ 个元素
+第 $i$ 行:$j-i$ 个元素
+因此,元素$a_{i,j}$在数组$B$中的下标
+$k=n+(n-1)+\cdots+(n-i+2)+(j-i+1)-1=(i-1)(2n-i+2)/2+(j-i)$
+元素下标的对称关系如下:
+矩阵 1,下标 1:
+
+$$
+k=\begin{cases}\dfrac{(i-1)(2n-i+2)}{2}+(j-i+1),&\quad i\leqslant j\text{(上三角区和主对角线元素)}\\\dfrac{n(n+1)}{2},&\quad i>j\text{(下三角区元素)}\end{cases}
+$$
+
+矩阵 1,下标 0:
+
+$$
+k=\begin{cases}\dfrac{(i-1)(2n-i+2)}{2}+(j-i),&\quad i\leqslant j\text{(上三角区和主对角线元素)}\\\dfrac{n(n+1)}{2},&\quad i>j\text{(下三角区元素)}\end{cases}
+$$
+
+![20240415152532](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240415152532.png)
+下三角列序应写为:
+矩阵 1,下标 1:
+
+$$
+k=\begin{cases}\dfrac{(j-1)(2n-j+2)}{2}+(i-j+1),&\quad i\leqslant j\text{(上三角区和主对角线元素)}\\\dfrac{n(n+1)}{2},&\quad i>j\text{(下三角区元素)}\end{cases}
+$$
+
+矩阵 1,下标 0:
+
+$$
+k=\begin{cases}\dfrac{(j-1)(2n-j+2)}{2}+(i-j),&\quad i\leqslant j\text{(上三角区和主对角线元素)}\\\dfrac{n(n+1)}{2},&\quad i>j\text{(下三角区元素)}\end{cases}
+$$
+
+## 三对角矩阵
+
+在三对角矩阵中,所有非零元素都集中在以主对角线为中心的 3 条对角线的区域,其他区域的元素都为零.
+
+$$
+\begin{bmatrix}a_{1,1}&a_{1,2}&&&\\a_{2,1}&a_{2,2}&a_{2,3}&&0\\&a_{3,2}&a_{3,3}&a_{3,4}&\\&&\ddots&\ddots&\ddots\\&0&&a_{n-1,n-2}&a_{n-1,n-1}&a_{n-1,n}\\&&&&a_{n,n-1}&a_{n,n}\end{bmatrix}
+$$
+
+三对角矩阵$A$也可以采用压缩存储,将 3 条对角线上的元素**按行优先方式**存放在一维数组 B 中,且$a_{1,1}$存放于$B[0]$中
+![20240415145913](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240415145913.png)
+
+## 稀疏矩阵
+
+- 稀疏矩阵压缩存储后便失去了随机存取特性
+- 矩阵中非零元素的个数$t$,相对矩阵元素的个数$s$来说非常少,即$s\geqslant t$的矩阵称为稀疏矩阵。
+- 稀疏矩阵的三元组表既可以采用数组存储,又可以采用十字链表存储.当存储稀疏矩阵时,不仅要保存三元组表,而且要保存稀疏矩阵的行数,列数和非零元素的个数.
+
 # 易错总结
+
 - 区别`A[0...n]`和`A[n]`
-- 
+- 链队列进行删除操作时,应注意可能存在空链表
