--- a/408数据结构/Note/栈,队列.md
+++ b/408数据结构/Note/栈,队列.md
@@ -12,7 +12,7 @@
 
 假设某个栈 $S=(a_1,a_2,a_3,a_4,a_5)$,则 $a_1$ 为栈底元素,$a_5$ 为栈顶元素.由于栈只能在栈顶进行插入和删除操作,进栈次序依次为 $(a_1,a_2,a_3,a_4,a_5)$,而出栈次序为 $(a_5,a_4,a_3,a_2,a_1)$.由此可见,栈的操作特性可以明显地概括为**后进先出** $(Last \ In \ First \ Out, LIFO)$.
 
-> 栈的数学性质:$n$个不同元素进栈,出栈元素不同排列的个数为$\frac{1}{n+1}C_{2n}^n$.上述公式称为**卡特兰数**.
+> 栈的数学性质:$n$ 个不同元素进栈,出栈元素不同排列的个数为 $\dfrac{1}{n+1}C_{2n}^n$ .上述公式称为**卡特兰数**.
 
 ## 栈的实现
 
