--- a/408数据结构/Note/树.md
+++ b/408数据结构/Note/树.md
@@ -19,11 +19,11 @@
 - 子结点(child node):如果 $u$ 是 $v$ 的父亲,那么 $v$ 是 $u$ 的子结点.子结点的顺序一般不加以区分,二叉树是一个例外.
 - 兄弟(sibling):同一个父亲的多个子结点互为兄弟.
 - 后代(descendant):子结点和子结点的后代.
-  <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240417133409.png" width = 80%/></div>
+  <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240417133409.png" width = 60%/></div>
 
 ### 树中基本术语
 
-<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240417141050.png" width = 80%/></div>
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240417141050.png" width = 60%/></div>
 
 - 子树:删掉与父亲相连的边后,该结点所在的子图.如上图中,与 C 结点颜色一样的点,是 C 结点的子图.
 - **结点的度和树的度:一个结点含有的孩子的个数称为该结点的度,树中结点的最大度数称为树的度**.该树中 A 结点的度是 3,B 结点的度是 2,该树的度是 3.
@@ -53,11 +53,94 @@
 4. 为使树的高度最小,在前 $h-1$ 层中,每层的结点数都要达到最大,前 $h-1$ 层最多有 $\dfrac{(m^{h-1}-1)}{(m-1)}$ 个结点,前$h$层最多有 $\dfrac{(m^h-1)}{(m-1)}$ 个结点.因此 $\dfrac{(m^{h-1}-1)}{(m-1)} <n \leq \dfrac{(m^h-1)}{(m-1)}$,即 $h-1<\log_m(n(m-1)+1)\leqslant h$ ,解得 $h_{\min}=\left\lceil\log_m(n(m-1)+1)\right\rceil$
 5. 由于树的度为 $m$, 因此至少有一个结点有 $m$ 个孩,它们处于同一层.为使树的高度最大,其他层可仅有一个结点,因此最大高度(层数)为 $n-m+1$.由此,也可逆推出高度为$h$、度为$m$ 的树至少有 $h+m-1$ 个结点
 
+## 树的存储结构
+
+### 双亲表示法
+
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240419141113.png" width = 80%/></div>
+
+```c++{.line-numbers}
+#define MAX_TREE_SIZE 100
+typedef struct
+{
+    ElemType data;//数据元素
+    int parent;// 双亲位置域
+}PTNode;
+typedef struct{//树的类型定义
+    PTNode nodes[MAX_TREE_SIZE];// 双亲表示
+    int n;//结点数
+}PTree;
+```
+
+双亲表示法可以很快的得到每个结点的双亲结点,但求结点的孩子时则需要遍历整个结构.因此其适合找父亲多,找孩子少的树.
+
+### 孩子表示法(顺序+链式存储)
+
+孩子表示法是将每个结点的孩子结点视为一个线性表,且以单链表作为存储结构,则 $n$ 个结点就有 $n$ 个孩子链表(叶结点的孩子链表为空表)
+![20240421141703](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240421141703.png)
+
+```c++{.line-numbers}
+typedef struct CCNode // 孩子链表
+{                     // 链表中每个结点存储的不是数据本身,而是数据在数组中存储的位置的下标
+    int child;
+    struct CCNode *next;
+} CCNode;
+typedef struct
+{
+    int data;
+    CCNode *firstChild; // 孩子链表的头指针
+} TreeNode;
+typedef struct
+{
+    TreeNode *nodes;
+    int n;
+} CTree;
+```
+
+孩子表示法寻找孩子的操作非常方便,而寻找双亲的操作则需要遍历$n$个结点中孩子链表指针域所指向的$n$个孩子链表,因此其适合找父亲少,找孩子多的树
+
+### 孩子兄弟表示法(链式存储)
+
+孩子兄弟表示法不借助数组,而以二叉链表作存储结构.由于它和二叉树一样在每个结点内保存两个结点指针,故又称二叉树表示法.与二叉树表示法不同的是,它的左指针指向它的第一个孩子,右指针指向其下一个兄弟.
+![20240421142550](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240421142550.png)
+
+```c++{.line-numbers}
+typedef struct CSNode
+{
+    int data;
+    struct CSNode *firstChild, *nextSibling;
+} CSNode, *CSTree;
+```
+
 ## 树的遍历
 
-### 先根遍历
+### DFS
 
-### 后根遍历
+#### 先根遍历
+
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240421143536.png" width = 80%/></div>
+
+- 若树非空,先访问根结点,再依次对每棵子树进行先根遍历
+- 树的先根遍历序列与这棵树相应二叉树的先序序列相同
+
+#### 后根遍历
+
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240421143655.png" width = 80%/></div>
+
+- 若树非空,先依次对每棵子树进行后根遍历,最后再访问根结点
+- 树的后根遍历序列与这棵树相应二叉树的中序序列相同
+
+### BFS
+
+#### 层次遍历
+
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240421143802.png" width = 40%/></div>
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240421144058.png" width = 40%/></div>
+
+- 算法流程:
+  1. 若树非空,则根节点入队.
+  2. 若队列非空,队头元素出队并访问,同时将该元素的孩子依次入队
+  3. 重复 ii,iii 直到队列为空
 
 # 二叉树的概念
 
@@ -67,7 +150,7 @@
 与树相似,二叉树也以递归的形式定义.二叉树是$n(n≥0)$个结点的有限集合:
 
 - 或者为空二叉树,即 $n=0$.
-- 或者由一个根结点和两个互不相交的被称为根的左子树和右子树组成。左子树和右子树又分别是一棵二叉树。
+- 或者由一个根结点和两个互不相交的被称为根的左子树和右子树组成.左子树和右子树又分别是一棵二叉树.
   ![20240417150027](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240417150027.png)
 
 ## m 叉树与度为 m 的树和度为 m 的有序树的区别
@@ -122,9 +205,9 @@
 2. 高为 $h$,有 $n$ 个结点的完全二叉树上,若结点编号$i>floor(n/2)$,则该结点一定是叶子结点,否则是非叶子结点
 3. 高为 $h$,有 $n$ 个结点的完全二叉树上,**叶子结点只会处于最后一层和倒数第二层**
 4. 高为 $h$,有 $n$ 个结点的完全二叉树上,**只可能存在一个结点度为 1 并且它肯定只有左孩子没有右孩子**
-5. 高为 $h$,有 $n$ 个结点的完全二叉树上,若 n 为奇数则所有结点度都为 2,若为偶数,则有一个结点度为 1。(叶子结点除外)
+5. 高为 $h$,有 $n$ 个结点的完全二叉树上,若 n 为奇数则所有结点度都为 2,若为偶数,则有一个结点度为 1.(叶子结点除外)
 6. 具有 $n$ 个 $(n>0)$ 结点的完全二叉树的高度为 $ceil(\log_2(n+1))$或$floor(\log_2n)+1$.
-<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240417160429.png" width = 40%/></div>
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240417160429.png" width = 20%/></div>
 
 <a id="section1"></a>
 
@@ -152,13 +235,13 @@
 <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240418114858.png" width = 80%/></div>
 
 二叉树顺序存储的优点是结点间关系直接体现在数组下标中,结点内部无需使用额外的空间去存储孩子或双亲结点的指针,可以直接根据数组下标找到任意结点的孩子和双亲结点.
-顺序存储方式缺点很明显,对一般二叉树,特别是稀疏二叉树,需补充大量占位的结点,导致存储空间浪费。
+顺序存储方式缺点很明显,对一般二叉树,特别是稀疏二叉树,需补充大量占位的结点,导致存储空间浪费.
 
 ### 链式存储
 
 二叉树的链式存储解决了顺序存储在某些情况下空间利用率低的缺点.其 c 语言描述为:
 
-```c++
+```c++{.line-numbers}
 typedef struct BiTNode
 {
     ElemType data;//数据域
@@ -170,15 +253,15 @@ typedef struct BiTNode
 
 ## 二叉树的遍历
 
-### 树上 DFS
+### 二叉树上 DFS
 
-在树上 DFS 是这样的一个过程:先访问根节点,然后分别访问根节点每个儿子的子树.
+在二叉树上 DFS 是这样的一个过程:先访问根节点,然后分别访问根节点每个儿子的子树.
 
 #### 先序遍历
 
-<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240418120417.png" width = 80%/></div>
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240418120417.png" width = 50%/></div>
 
-```c++
+```c++{.line-numbers}
 void preorder(BiTree* root) {
   if (root) {
     cout << root->key << " "; // 根
@@ -190,9 +273,9 @@ void preorder(BiTree* root) {
 
 #### 中序遍历
 
-<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240418120619.png" width = 80%/></div>
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240418120619.png" width = 50%/></div>
 
-```c++
+```c++{.line-numbers}
 void inorder(BiTree* root) {
   if (root) {
     inorder(root->left);
@@ -210,9 +293,9 @@ void inorder(BiTree* root) {
 
 #### 后序遍历
 
-<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240418120713.png" width = 80%/></div>
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240418120713.png" width = 50%/></div>
 
-```c++
+```c++{.line-numbers}
 void postorder(BiTree* root) {
   if (root) {
     postorder(root->left);
@@ -228,19 +311,19 @@ void postorder(BiTree* root) {
 - 当访问到任意结点时,都代表以该结点为根的子树已经全部遍历完成并且都退出了栈,不会再访问到
 - 若该结点是其双亲结点的右孩子,此时其双亲结点都没有被访问到并且还在栈中.而且该结点的所有祖先结点也保存在栈中
 
-### 树上 BFS
+### 二叉树上 BFS
 
 从树根开始,严格按照层次来访问节点.
 
 #### 层次遍历
 
-树层序遍历是指按照从根节点到叶子节点的层次关系,一层一层的横向遍历各个节点。根据 BFS 的定义可以知道,BFS 所得到的遍历顺序就是一种层序遍历。但层序遍历要求将不同的层次区分开来,所以其结果通常以二维数组的形式表示。
+树层序遍历是指按照从根节点到叶子节点的层次关系,一层一层的横向遍历各个节点.根据 BFS 的定义可以知道,BFS 所得到的遍历顺序就是一种层序遍历.但层序遍历要求将不同的层次区分开来,所以其结果通常以二维数组的形式表示.
 
-例如,下图的树的层序遍历的结果是 `[[1], [2, 3, 4], [5, 6]]`(每一层从左向右)。
+例如,下图的树的层序遍历的结果是 `[[1], [2, 3, 4], [5, 6]]`(每一层从左向右).
 
 <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240418121903.png" width = 40%/></div>
 
-```c++
+```c++{.line-numbers}
 vector<vector<int>> levelOrder(Node *root)
 {
     if (!root)
@@ -273,7 +356,7 @@ vector<vector<int>> levelOrder(Node *root)
 
 已知中序遍历序列和另外一个序列可以求出树的结构
 
-<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240418120807.png" width = 80%/></div>
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240418120807.png" width = 50%/></div>
 
 1.  前序的第一个是 `root`,后序的最后一个是 `root`
 2.  先确定根节点,然后根据中序遍历,在根左边的为左子树,根右边的为右子树
@@ -284,7 +367,7 @@ vector<vector<int>> levelOrder(Node *root)
 - 定义:一个二叉树通过如下的方法"穿起来":所有原本为空的右子节点指针改为指向该节点在中序序列中的后继,所有原本为空的左子节点指针改为指向该节点的中序序列的前驱.
 - 作用:线索二叉树能线性地遍历二叉树,从而比递归的中序遍历更快.使用线索二叉树也能够方便的找到一个节点的父节点.
 - 线索二叉树的存储结构:
-<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240418151020.png" width = 80%/></div>
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240418151020.png" width = 50%/></div>
 其中标志域的含义如下:
 
 $$
@@ -294,7 +377,7 @@ $$
 线索为 1 时,指针域是前驱或后继结点,为 0 时,指针域是孩子结点.
 代码表示:
 
-```c++
+```c++{.line-numbers}
 typedef struct ThreadNode
 {
     int data;// 数据元素
@@ -313,7 +396,7 @@ typedef struct ThreadNode
 
 ##### 中序线索化
 
-```c++
+```c++{.line-numbers}
 void setThread(ThreadTree &root, ThreadTree &pre)
 {
     if (!root->lchild) // 当前结点的左子树为空
@@ -354,10 +437,84 @@ void CreateInThread(ThreadTree T)
 
 ##### 中序线索二叉树的遍历
 
-- 中序遍历的第一个结点与最后一个结点
-- 找到结点的后继
-- 找到结点的前驱
+- 中序遍历的第一个结点与最后一个结点:在中序遍历序列中,第一个结点是从根结点出发、沿着左孩子的路径不断向下搜索,遇到的第一个无左孩子的结点,该结点等价于"第一个`lTag=1`的结点"
+
+```c++{.line-numbers}
+ThreadNode *firstNode(ThreadNode *r)
+{
+  if (!r)
+      return NULL;
+  while (!r->lTag)
+      r = r->lchild;
+  return r;
+}
+```
+
+同理沿着右孩子的路径不断向下探索,可写出得到中序遍历序列的最后一个结点的代码:
+
+```c++{.line-numbers}
+ThreadNode *finalNode(ThreadNode *r)
+{
+    if (!r)
+        return NULL;
+    while (!r->rTag)
+        r = r->rchild;
+    return r;
+}
+```
+
+- 找到结点的后继:若结点的`rTag=1`,则`rChild`的指向即结点的后继(该结点右子树只有一个结点,因此直接找到).否则结点右子树(该结点右子树有很多结点,因此需要递归找到最后一个左子树的左孩子)的中序遍历序列的首结点为结点的后继,即右子树中一直往左走直到遇到没有左孩子的结点(也称为最左结点)
+
+```c++{.line-numbers}
+ThreadNode *firstNode(ThreadNode *r)
+{
+  if (!r)
+      return NULL;
+  while (!r->lTag)
+      r = r->lchild;
+  return r;
+}
+ThreadNode *nextNode(ThreadNode *r)
+{
+    if (r == NULL)
+        return NULL;
+    if (r->rTag == 1)
+        return r->rchild;
+    return firstNode(r->rchild);
+}
+```
+
+- 找到结点的前驱:寻找前驱,先判断结点的 lTag 是否为 1,若是则 lchild 的指向即前驱,否则结点左子树的中序遍历序列的末结点(即最右结点)为结点的前驱
+
+```c++{.line-numbers}
+ThreadNode *finalNode(ThreadNode *r)
+{
+    if (!r)
+        return NULL;
+    while (!r->rTag)
+        r = r->rchild;
+    return r;
+}
+ThreadNode *lastNode(ThreadNode *r)
+{
+    if (r == NULL)
+        return NULL;
+    if (r->lTag == 1)
+        return r->lchild;
+    return finalNode(r->lchild);
+}
+```
+
 - 中序遍历中序线索二叉树
+  利用上面介绍的操作,可以完成中序线索二叉树的中序遍历:
+
+```c++{.line-numbers}
+void inOrder(ThreadNode *r)
+{
+    for (ThreadNode *p = firstNode(r); p; p = nextNode(p))
+        visit(p);
+}
+```
 
 #### 先序线索二叉树
 
@@ -369,7 +526,7 @@ void CreateInThread(ThreadTree T)
 
 ##### 先序线索化
 
-```c++
+```c++{.line-numbers}
 void preThread(ThreadTree &root, ThreadTree &pre)
 {
     if (!root) // 空树直接返回
@@ -382,9 +539,38 @@ void preThread(ThreadTree &root, ThreadTree &pre)
 
 ##### 先序线索二叉树的遍历
 
-- 先序遍历的第一个结点
-- 先序遍历中结点的后继
+- 先序遍历的第一个结点:根结点就是第一个结点,因此直接返回根结点
+
+```c++{.line-numbers}
+ThreadNode *firstNode(ThreadNode *r)
+{
+    return r;
+}
+```
+
+- 先序遍历中结点的后继:若 r 有左孩子,则左孩子就是后继,否则若有右孩子,则右孩子就是后继.若既无左孩子又无右孩子.则其 rChlid 指向的就是后继.
+
+```c++{.line-numbers}
+ThreadNode *nextNode(ThreadNode *r)
+{
+    if (r == NULL)
+        return NULL;
+    if (r->lchild != NULL && r->lTag == 0)
+        return r->lchild;
+    else
+        return r->rchild;
+}
+```
+
 - 先序遍历先序线索二叉树
+
+```c++{.line-numbers}
+void PreOrder(ThreadNode *r)
+{
+    for (ThreadNode *p = firstNode(r); p; p = nextNode(p))
+        visit(p);
+}
+```
 
 #### 后序线索二叉树
 
@@ -396,7 +582,7 @@ void preThread(ThreadTree &root, ThreadTree &pre)
 
 ##### 后序线索化
 
-```c++
+```c++{.line-numbers}
 void postThread(ThreadTree &root, ThreadTree &pre)
 {
     if (!root) // 空树直接返回
@@ -409,29 +595,458 @@ void postThread(ThreadTree &root, ThreadTree &pre)
 
 ##### 后序线索二叉树的遍历
 
-- 后序遍历的第一个结点
+- 后序遍历的第一个结点:后序遍历的第一个结点是从根结点出发,若有左孩子,则转到左孩子,若无左孩子但有右孩,则转到右孩子,一直前进下去直到第一个叶结点.
+
+```c++{.line-numbers}
+ThreadNode *firstNode(ThreadNode *r)
+{
+    if (r == NULL)
+        return NULL;
+    if (r->lTag == 0)
+        return firstNode(r->lchild);
+    else if (r->rTag == 0)
+        return firstNode(r->rchild);
+}
+```
+
 - 后序遍历的后继结点
+  - 若结点 r 是整个二叉树的根,则其后继为空;
+  - 若结点 r 是其双亲的左孩子,且其双亲有右子树,则其后继为双亲的右子树的后序遍历序列的首位结点(右子树的最左边的结点);
+  - 若结点 r 是其双亲的左孩子且其双亲没有右子树,或者结点 r 是其双亲的右孩子,则其后继即为其双亲
+  ```c++{.line-numbers}
+  ThreadNode *nextNode(ThreadNode *r, ThreadNode *parent)
+  {
+    if (r == NULL)
+        return NULL; // 特殊情况
+    if (r->rTag == 1)
+        return r->rchild; // 有右线索
+    if (parent == NULL)
+        return NULL; // 是根结点
+    if (r == parent->lchild && parent->rTag == 0)
+        return firstNode(parent->rchild);//是其双亲左孩子且双亲有右子树
+    else
+        return parent;//是其双亲的左孩子且其双亲没有右子树,或者结点r是其双亲的右孩子
+  }
+  ```
 - 后序遍历后序线索二叉树
+
+```c++{.line-numbers}
+void postOrder(ThreadNode *r)
+{
+    for (ThreadNode *p = firstNode(r); p; p = nextNode(p,p->parent))
+        visit(p);
+}
+```
 
 #### 三种线索二叉树的对比
 
 <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240418161534.png" width = 90%/></div>
 
+|        | 中序线索二叉树 | 先序线索二叉树 | 后序线索二叉树 |
+| :----: | :------------: | :------------: | :------------: |
+| 找前驱 |       ✓        |       ✗        |       ✓        |
+| 找后继 |       ✓        |       ✓        |       ✗        |
+
 # 森林的基本概念
 
 ## 森林的定义
 
-森林是$m$课互不相交的树的集合
+森林是$m$棵互不相交的树的集合
 
 ## 树,二叉树,森林的转换
 
+### 树转换为二叉树
+
+原理:二叉树的左孩子是该结点的子结点,右孩子是该结点的兄弟
+
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240421151030.png" width = 60%/></div>
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240421151102.png" width = 70%/></div>
+
+### 森林转换为二叉树
+
+原理:
+
+- 森林中各棵树的根结点视为平级的兄弟关系
+- 右结点依然是孩子,左结点依然是该结点的子结点
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240421151357.png" width = 70%/></div>
+
 ## 森林的遍历
+
+森林的遍历方式主要又两种,分别是先序遍历和中序遍历,可以按照树的遍历方式来对比
+
+- 先序遍历森林
+  1. 访问森林中第一棵树的根结点
+  2. 先序遍历第一棵树中根结点的子树森林
+  3. 先序遍历除去第一棵树之后剩余的树构成的森林
+- 中序遍历森林
+  1. 中序遍历森林中第一棵树的根结点的子树森林
+  2. 访问第一棵树的根结点
+  3. 中序遍历除去第一棵树之后剩余的树构成的森林
+
+|    树    |   森林   |  二叉树  |
+| :------: | :------: | :------: |
+| 先根遍历 | 先序遍历 | 先序遍历 |
+| 后根遍历 | 中序遍历 | 中序遍历 |
 
 # 树的应用
 
 ## 哈夫曼树
 
+### 哈夫曼树的定义
+
+- 部分基础概念
+  - 从树中一个结点到另一个结点之间的分支构成这两个结点之间的**路径**
+  - 路径上的分支数目称**路径长度**
+  - 在许多应用中,树中结点常常被赋子一个表示某种意义的数值,称为该结点的**权**
+  - 从树的根到一个结点的路径长度与该结点上权值的乘积,称为该结点的**带权路径长度**
+  - 树中所有叶结点的带权路径长度之和称为该树的带权路径长度,记为$$WPL=\sum_{i=1}^nw_il_i$$其中:$w_i$ 为二叉树第 $i$ 个叶结点的权值,$l_i$ 为从根结点到第 $i$ 个叶结点的路径长度
+
+对于给定一组具有确定权值的叶结点,可以构造出不同的二叉树,其中,**WPL 最小的二叉树**称为**霍夫曼树(Huffman Tree)** 也称最优二叉树.
+对于霍夫曼树来说,其叶结点权值越小,离根越远,叶结点权值越大,离根越近
+
+```c++{.line-numbers}
+typedef struct HNode
+{
+    int weight;
+    HNode *lchild, *rchild;
+} *Htree;
+
+int getWPL(Htree root, int len)
+{ // 递归实现，对于已经建好的霍夫曼树，求 WPL
+    if (root == NULL)
+        return 0;
+    else
+    {
+        if (root->lchild == NULL && root->rchild == NULL) // 叶节点
+            return root->weight * len;
+        else
+        {
+            int left = getWPL(root->lchild, len + 1);
+            int right = getWPL(root->rchild, len + 1);
+            return left + right;
+        }
+    }
+}
+int getWPL(int arr[], int n)
+{// 对于未建好的霍夫曼树，直接求其 WPL
+    priority_queue<int, vector<int>, greater<int>> huffman; // 小根堆
+    for (int i = 0; i < n; i++)
+        huffman.push(arr[i]);
+
+    int res = 0;
+    for (int i = 0; i < n - 1; i++)
+    {
+        int x = huffman.top();
+        huffman.pop();
+        int y = huffman.top();
+        huffman.pop();
+        int temp = x + y;
+        res += temp;
+        huffman.push(temp);
+    }
+    return res;
+}
+```
+
+### 哈夫曼树的构造
+
+算法步骤如下:
+
+1. **初始化**:由给定的 $n$ 个权值构造 $n$ 棵只有一个根节点的二叉树,得到一个二叉树集合 $F$
+2. **选取与合并**:从二叉树集合 $F$ 中选取根节点权值 **最小的两棵** 二叉树分别作为左右子树构造一棵新的二叉树,这棵新二叉树的根节点的权值为其左、右子树根结点的权值和
+3. **删除与加入**:从 $F$ 中删除作为左、右子树的两棵二叉树,并将新建立的二叉树加入到 $F$ 中
+4. 重复 2、3 步,当集合中只剩下一棵二叉树时,这棵二叉树就是霍夫曼树
+
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240421155326.png" width = 80%/></div>
+
+```c++{.line-numbers}
+typedef struct HNode
+{
+    int weight;
+    HNode *lchild, *rchild;
+} *Htree;
+
+Htree createHuffmanTree(int arr[], int n)
+{
+    Htree forest[N];
+    Htree root = NULL;
+    for (int i = 0; i < n; i++)
+    { // 将所有点存入森林
+        Htree temp;
+        temp = (Htree)malloc(sizeof(HNode));
+        temp->weight = arr[i];
+        temp->lchild = temp->rchild = NULL;
+        forest[i] = temp;
+    }
+
+    for (int i = 1; i < n; i++)
+    {                           // n-1 次循环建哈夫曼树
+        int minn = -1, minnSub; // minn 为最小值树根下标，minnsub 为次小值树根下标
+        for (int j = 0; j < n; j++)
+        {
+            if (forest[j] != NULL && minn == -1)
+            {
+                minn = j;
+                continue;
+            }
+            if (forest[j] != NULL)
+            {
+                minnSub = j;
+                break;
+            }
+        }
+
+        for (int j = minnSub; j < n; j++)
+        { // 根据 minn 与 minnSub 赋值
+            if (forest[j] != NULL)
+            {
+                if (forest[j]->weight < forest[minn]->weight)
+                {
+                    minnSub = minn;
+                    minn = j;
+                }
+                else if (forest[j]->weight < forest[minnSub]->weight)
+                {
+                    minnSub = j;
+                }
+            }
+        }
+
+        // 建新树
+        root = (Htree)malloc(sizeof(HNode));
+        root->weight = forest[minn]->weight + forest[minnSub]->weight;
+        root->lchild = forest[minn];
+        root->rchild = forest[minnSub];
+
+        forest[minn] = root;    // 指向新树的指针赋给 minn 位置
+        forest[minnSub] = NULL; // minnSub 位置为空
+    }
+    return root;
+}
+```
+
+### 哈夫曼编码
+
+在进行程序设计时,通常给每一个字符标记一个单独的代码来表示一组字符,即 **编码**.
+在进行二进制编码时,假设所有的代码都等长,那么表示 $n$ 个不同的字符需要 $\left \lceil \log_2 n \right \rceil$ 位,称为 **固定长度编码**.
+如果每个字符的 **使用频率相等**,那么等长编码无疑是空间效率最高的编码方法,而如果字符出现的频率不同,则可以让频率高的字符采用尽可能短的编码,频率低的字符采用尽可能长的编码,来构造出一种 **可变长度编码**,从而获得更好的空间效率.
+在设计不等长编码时,要考虑解码的唯一性,如果一组编码中任一编码都不是其他任何一个编码的前缀,那么称这组编码为 **前缀编码**,其保证了编码被解码时的唯一性.
+霍夫曼树可用于构造 **最短的前缀编码**,即 **霍夫曼编码(Huffman Code)**,其构造步骤如下：
+
+1. 设需要编码的字符集为：$d_1,d_2,\dots,d_n$,他们在字符串中出现的频率为：$w_1,w_2,\dots,w_n$.
+2. 以 $d_1,d_2,\dots,d_n$ 作为叶结点,$w_1,w_2,\dots,w_n$ 作为叶结点的权值,构造一棵霍夫曼树.
+3. 规定哈夫曼编码树的左分支代表 $0$,右分支代表 $1$,则从根结点到每个叶结点所经过的路径组成的 $0$、$1$ 序列即为该叶结点对应字符的编码.
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240421160826.png" width = 30%/></div>
+
+如果将每个字符当作一个独立的结点,其权值为它出现的频度(或次数),构造出对应的哈夫曼树。然后,将从根到叶结点的路径上分支标记的字符串作为该字符的编码.
+
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240421161050.png" width = 60%/></div>
+
+```c++{.line-numbers}
+typedef struct HNode
+{
+    int weight;
+    HNode *lchild, *rchild;
+} *Htree;
+
+void huffmanCoding(Htree root, int len, int arr[])
+{ // 计算霍夫曼编码
+    if (root != NULL)
+    {
+        if (root->lchild == NULL && root->rchild == NULL)
+        {
+            printf("结点为 %d 的字符的编码为: ", root->weight);
+            for (int i = 0; i < len; i++)
+                printf("%d", arr[i]);
+            printf("\n");
+        }
+        else
+        {
+            arr[len] = 0;
+            huffmanCoding(root->lchild, len + 1, arr);
+            arr[len] = 1;
+            huffmanCoding(root->rchild, len + 1, arr);
+        }
+    }
+}
+```
+
 ## 并查集
+
+### 简介
+
+- 并查集是一种树形数据结构，经常用于处理一些集合之间的操作，例如元素查找、集合合并等等
+- 不同集合在并查集中以不同的树来表示一般每棵树的根节点会作为当前集合的代表
+- 想要查询两个元素是不是在同一集合里，需要比较两个元素所在集合的代表元是否相同即可
+
+### 基本操作
+
+#### 并查集的初始化
+
+- 假设一开始有$n$个元素，这些元素初始都是独立的。显然它们构成了个集合，每个集合的代表元就是这些元素自己
+
+```c++{.line-numbers}
+const int manx = 1e5 + 10;
+int fa[manx + 1];  // fa数组记录每个元素由谁代表
+int sz[manx + 1];  // sz数组记录每个集合元素个数
+int dep[manx + 1]; // dep数组记录每个集合的树深度
+void initialize(int n)
+{
+    for (int i = 1; i <= n; i++)
+    {
+        fa[i] = i;
+        sz[i] = dep[i] = 1;
+    }
+}
+```
+
+#### 集合合并
+
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240421163303.png" width = 80%/></div>
+
+- 先找到 x,y 对应的代表元素(fa 是自己的元素)
+- 将其中一个代表元素的 fa 指向另外一个,那么原来在这个代表下的所有元素的代表都会指向另一个元素
+
+```c++{.line-numbers}
+int Findset(int x)
+{
+    if (fa[x] == x)
+        return x;
+    return Findset(fa[x]);
+}
+// 将x,y合并在一起
+void Union(int x, int y)
+{
+    int fx = Findset(x), fy = Findset(y);
+    if (fx == fy)
+        return;
+    fa[fx] = fy;
+}
+```
+
+#### 路径压缩
+
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240421163241.png" width = 70%/></div>
+
+- 如果并查集在合并过程中形成了一条长链，每次找代表元可能都要花费大量的时间。
+- 我们可以缩短开查集中的路径，具体做法就是在查询的过程中，把沿途的每个节点的 fa 都设为集合代表
+
+```c++{.line-numbers}
+int Findset(int x)
+{
+    if (x == fa[x])
+        return x;
+    fa[x] = Findset(fa[x]);
+    return fa[x];
+}
+```
+
+#### 启发式合并
+
+- 在合并集合的时候,我们尽量选择包含元素个数少的集合,将它合并到另一个集合中,使需要改变代表元的元素数量尽可能少。
+- 这种将较小的集合并到较大的集合中称为启发式合并,在其他数据结构中也很常见。
+
+```c++{.line-numbers}
+void Union(int x, int y)
+{
+    int fx = Findset(x), fy = Findset(y);
+    if (fx == fy)
+        return;
+    if (sz[fx] > sz[fy])
+        swap(fx, fy);
+    fa[fx] = fy;
+    sz[fy] += sz[fx];
+}
+```
+
+#### 按深度合并
+
+```c++{.line-numbers}
+void Union(int x, int y)
+{
+    int fx = Findset(x), fy = Findset(y);
+    if (fx == fy)
+        return;
+    if (dep[fx] > dep[fy])
+        swap(fx, fy);
+    fa[fx] = fy;
+    if (dep[fx] == dep[fy]) //只有两课树深度相等时才会更新
+        dep[fy]++;
+}
+```
+
+### 扩展操作
+
+- 在维护基础操作(1.合并集合 2.查询某节点的祖宗节点)的同时可以记录一下数据
+  - 记录每个集合的大小(绑定到根结点)
+  - 每个点到根节点的距离(绑定到每个元素)
+
+### 代码模版
+
+- 朴素并查集：
+
+```c++{.line-numbers}
+int p[N]; //存储每个点的祖宗节点
+// 递归操作返回x的祖宗节点
+int find(int x)
+{
+    if (p[x] != x) p[x] = find(p[x]);
+    return p[x];
+}
+// 初始化,假定节点编号是1~n
+for (int i = 1; i <= n; i ++ ) p[i] = i;
+// 合并a和b所在的两个集合：b爹给a爹
+p[find(a)] = find(b);
+```
+
+- 维护$size$的并查集：
+
+```c++{.line-numbers}
+int p[N], size[N];
+//p[]存储每个点的祖宗节点, size[]只有祖宗节点的有意义,表示祖宗节点所在集合中的点的数量
+// 返回x的祖宗节点
+int find(int x)
+{
+    if (p[x] != x) p[x] = find(p[x]);
+    return p[x];
+}
+// 初始化,假定节点编号是1~n
+for (int i = 1; i <= n; i ++ )
+{
+    p[i] = i;
+    size[i] = 1;
+}
+// 合并a和b所在的两个集合：
+size[find(b)] += size[find(a)];
+p[find(a)] = find(b);
+```
+
+- 维护到祖宗节点距离的并查集：
+
+```c++{.line-numbers}
+int p[N], d[N];
+//p[]存储每个点的祖宗节点, d[x]存储x到p[x]的距离
+// 返回x的祖宗节点
+int find(int x)
+{
+    if (p[x] != x)
+    {
+        int u = find(p[x]);
+        d[x] += d[p[x]];
+        p[x] = u;
+    }
+    return p[x];
+}
+// 初始化,假定节点编号是1~n
+for (int i = 1; i <= n; i ++ )
+{
+    p[i] = i;
+    d[i] = 0;
+}
+// 合并a和b所在的两个集合：
+p[find(a)] = find(b);
+d[find(a)] = distance; // 根据具体问题,初始化find(a)的偏移量
+```
 
 ## 树型查找
 
@@ -450,4 +1065,4 @@ void postThread(ThreadTree &root, ThreadTree &pre)
 # 易错总结
 
 - 度为 m 的树,某一层不一定只有 m 个点,如下图该树的度为 3,但是在第三层有 5 个点:
-  ![20240417141050](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240417141050.png)
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240417141050.png" width = 40%/></div>
