--- a/408数据结构/Note/树.md
+++ b/408数据结构/Note/树.md
@@ -51,7 +51,7 @@
 2. 已知树的度为 $m$ ,那么第二层最多有 $m$ 个结点,第三层最多有$m^2$个结点,第四层最多有 $m^3$ 个结点,那么可以观察出,第 $i$ 层最多有$m^{i-1}$个结点
 3. 由第二个性质可知,$m$ 叉树每一层如果是 $m^{i-1}$ 个结点的话,总计整个树最多有 $\dfrac{(m^h-1)}{(m-1)}$ 个结点
 4. 为使树的高度最小,在前 $h-1$ 层中,每层的结点数都要达到最大,前 $h-1$ 层最多有 $\dfrac{(m^{h-1}-1)}{(m-1)}$ 个结点,前$h$层最多有 $\dfrac{(m^h-1)}{(m-1)}$ 个结点.因此 $\dfrac{(m^{h-1}-1)}{(m-1)} <n \leq \dfrac{(m^h-1)}{(m-1)}$,即 $h-1<\log_m(n(m-1)+1)\leqslant h$ ,解得 $h_{\min}=\left\lceil\log_m(n(m-1)+1)\right\rceil$
-5. 由于树的度为 $m$, 因此至少有一个结点有 $m$ 个孩,它们处于同一层.为使树的高度最大,其他层可仅有一个结点,因此最大高度(层数)为 $n-m+1$.由此,也可逆推出高度为$h$、度为$m$ 的树至少有 $h+m-1$ 个结点
+5. 由于树的度为 $m$, 因此至少有一个结点有 $m$ 个孩,它们处于同一层.为使树的高度最大,其他层可仅有一个结点,因此最大高度(层数)为 $n-m+1$.由此,也可逆推出高度为 $h$、度为 $m$ 的树至少有 $h+m-1$ 个结点
 
 ## 树的存储结构
 
@@ -198,7 +198,7 @@ typedef struct CSNode
 ### 完全二叉树
 
 ![20240417154136](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240417154136.png)
-只有最下面两层结点的度数可以小于 2,且最下面一层的结点都集中在该层最左边的连续位置上
+**只有最下面两层结点的度数可以小于 2**,且最下面一层的结点都集中在该层最左边的连续位置上
 **完全二叉树的性质**:
 
 1. **高为 $h$,有 $n$ 个结点的完全二叉树上,编号与满二叉树的一一对应**
@@ -207,7 +207,7 @@ typedef struct CSNode
 4. 高为 $h$,有 $n$ 个结点的完全二叉树上,**只可能存在一个结点度为 1 并且它肯定只有左孩子没有右孩子**
 5. 高为 $h$,有 $n$ 个结点的完全二叉树上,若 n 为奇数则所有结点度都为 2,若为偶数,则有一个结点度为 1.(叶子结点除外)
 6. 具有 $n$ 个 $(n>0)$ 结点的完全二叉树的高度为 $ceil(\log_2(n+1))$或$floor(\log_2n)+1$.
-<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240417160429.png" width = 20%/></div>
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240417160429.png" width = 30%/></div>
 
 <a id="section1"></a>
 
@@ -239,7 +239,8 @@ typedef struct CSNode
 
 ### 链式存储
 
-二叉树的链式存储解决了顺序存储在某些情况下空间利用率低的缺点.其 c 语言描述为:
+- 二叉树的链式存储解决了顺序存储在某些情况下空间利用率低的缺点.其 `c` 语言描述为:
+- 在含有$n$个结点的二叉链表中,含有$n+1$个空链域
 
 ```c++{.line-numbers}
 typedef struct BiTNode
@@ -366,6 +367,8 @@ vector<vector<int>> levelOrder(Node *root)
 
 - 定义:一个二叉树通过如下的方法"穿起来":所有原本为空的右子节点指针改为指向该节点在中序序列中的后继,所有原本为空的左子节点指针改为指向该节点的中序序列的前驱.
 - 作用:线索二叉树能线性地遍历二叉树,从而比递归的中序遍历更快.使用线索二叉树也能够方便的找到一个节点的父节点.
+- 线索二叉树是物理结构
+- $n$个结点的线索二叉树上有$n+1$个线索
 - 线索二叉树的存储结构:
 <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240418151020.png" width = 50%/></div>
 其中标志域的含义如下:
@@ -712,7 +715,7 @@ typedef struct HNode
 } *Htree;
 
 int getWPL(Htree root, int len)
-{ // 递归实现，对于已经建好的霍夫曼树，求 WPL
+{ // 递归实现,对于已经建好的霍夫曼树,求 WPL
     if (root == NULL)
         return 0;
     else
@@ -728,7 +731,7 @@ int getWPL(Htree root, int len)
     }
 }
 int getWPL(int arr[], int n)
-{// 对于未建好的霍夫曼树，直接求其 WPL
+{// 对于未建好的霍夫曼树,直接求其 WPL
     priority_queue<int, vector<int>, greater<int>> huffman; // 小根堆
     for (int i = 0; i < n; i++)
         huffman.push(arr[i]);
@@ -781,7 +784,7 @@ Htree createHuffmanTree(int arr[], int n)
 
     for (int i = 1; i < n; i++)
     {                           // n-1 次循环建哈夫曼树
-        int minn = -1, minnSub; // minn 为最小值树根下标，minnsub 为次小值树根下标
+        int minn = -1, minnSub; // minn 为最小值树根下标,minnsub 为次小值树根下标
         for (int j = 0; j < n; j++)
         {
             if (forest[j] != NULL && minn == -1)
@@ -795,7 +798,6 @@ Htree createHuffmanTree(int arr[], int n)
                 break;
             }
         }
-
         for (int j = minnSub; j < n; j++)
         { // 根据 minn 与 minnSub 赋值
             if (forest[j] != NULL)
@@ -825,6 +827,14 @@ Htree createHuffmanTree(int arr[], int n)
 }
 ```
 
+### 哈夫曼树的性质
+
+从上述构造过程中可以看出哈夫曼树具有如下特点
+
+1. 每个初始结点最终都成为叶结点,且权值越小的结点到根结点的路径长度越大.
+2. 构造过程中共新建了$n-1$ 个结点(双分支结点),因此哈夫曼树的结点总数为 2$n-1$.
+3. 每次构造都选择 2 棵树作为新结点的孩子,因此哈夫曼树中不存在度为 1 的结点.
+
 ### 哈夫曼编码
 
 在进行程序设计时,通常给每一个字符标记一个单独的代码来表示一组字符,即 **编码**.
@@ -838,7 +848,7 @@ Htree createHuffmanTree(int arr[], int n)
 3. 规定哈夫曼编码树的左分支代表 $0$,右分支代表 $1$,则从根结点到每个叶结点所经过的路径组成的 $0$、$1$ 序列即为该叶结点对应字符的编码.
 <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240421160826.png" width = 30%/></div>
 
-如果将每个字符当作一个独立的结点,其权值为它出现的频度(或次数),构造出对应的哈夫曼树。然后,将从根到叶结点的路径上分支标记的字符串作为该字符的编码.
+如果将每个字符当作一个独立的结点,其权值为它出现的频度(或次数),构造出对应的哈夫曼树.然后,将从根到叶结点的路径上分支标记的字符串作为该字符的编码.
 
 <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240421161050.png" width = 60%/></div>
 
@@ -871,19 +881,38 @@ void huffmanCoding(Htree root, int len, int arr[])
 }
 ```
 
+## $m$叉哈夫曼树
+
+将哈夫曼树扩展到$m$叉的情况,此时每个结点最多可以有$m$个子结点.
+
+### $m$叉哈夫曼树的构造
+
+由$n_0$个初始结点,构造$m$叉哈夫曼树的算法描述如下:
+
+1. 首先计算$t=(n_0-1)$ mod $(m-1)$.若$t$不为 0,则补充$m-1-t$个权为 0 的结点到初始结点中;若$t$为 0, 则无需添加结点.
+2. 每次构造 1 个新的结点,并从全部结点中取出$m$个权值最小的结点,作为新结点的孩子结点,新结点的权为各孩子结点的权之和.再将新结点加入总的结点中.这一过程移除了$m$ 个结点,新加 1 个结点,故结点减少$m-1$个
+3. 重复上一操作,直到只剩下一个结点,此时$m$叉哈夫曼树构造完毕.
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240503205406.png" width = 100%/></div>
+
+### $m$叉哈夫曼树的性质
+
+- 哈夫曼树只有度为 $0$ 和度为 $2$ 的结点，同理 $k$ 叉哈夫曼树也只有度为 $0$ 和度为 $k$ 的结点
+- 已知树有此性质$\mathrm{n=n_0+n_k=kn_k+1}$
+- 故$k$叉哈夫曼树的叶子结点和非叶子结点应满足$n_k=ceil \left(\dfrac{n_0-1}{k-1} \right)$
+
 ## 并查集
 
 ### 简介
 
-- 并查集是一种树形数据结构，经常用于处理一些集合之间的操作，例如元素查找、集合合并等等
+- 并查集是一种树形数据结构,经常用于处理一些集合之间的操作,例如元素查找、集合合并等等
 - 不同集合在并查集中以不同的树来表示一般每棵树的根节点会作为当前集合的代表
-- 想要查询两个元素是不是在同一集合里，需要比较两个元素所在集合的代表元是否相同即可
+- 想要查询两个元素是不是在同一集合里,需要比较两个元素所在集合的代表元是否相同即可
 
 ### 基本操作
 
 #### 并查集的初始化
 
-- 假设一开始有$n$个元素，这些元素初始都是独立的。显然它们构成了个集合，每个集合的代表元就是这些元素自己
+- 假设一开始有$n$个元素,这些元素初始都是独立的.显然它们构成了个集合,每个集合的代表元就是这些元素自己
 
 ```c++{.line-numbers}
 const int manx = 1e5 + 10;
@@ -928,8 +957,8 @@ void Union(int x, int y)
 
 <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240421163241.png" width = 70%/></div>
 
-- 如果并查集在合并过程中形成了一条长链，每次找代表元可能都要花费大量的时间。
-- 我们可以缩短开查集中的路径，具体做法就是在查询的过程中，把沿途的每个节点的 fa 都设为集合代表
+- 如果并查集在合并过程中形成了一条长链,每次找代表元可能都要花费大量的时间.
+- 我们可以缩短开查集中的路径,具体做法就是在查询的过程中,把沿途的每个节点的 fa 都设为集合代表
 
 ```c++{.line-numbers}
 int Findset(int x)
@@ -943,8 +972,8 @@ int Findset(int x)
 
 #### 启发式合并
 
-- 在合并集合的时候,我们尽量选择包含元素个数少的集合,将它合并到另一个集合中,使需要改变代表元的元素数量尽可能少。
-- 这种将较小的集合并到较大的集合中称为启发式合并,在其他数据结构中也很常见。
+- 在合并集合的时候,我们尽量选择包含元素个数少的集合,将它合并到另一个集合中,使需要改变代表元的元素数量尽可能少.
+- 这种将较小的集合并到较大的集合中称为启发式合并,在其他数据结构中也很常见.
 
 ```c++{.line-numbers}
 void Union(int x, int y)
