--- a/408数据结构/Note/树.md
+++ b/408数据结构/Note/树.md
@@ -704,8 +704,8 @@ void postOrder(ThreadNode *r)
   - 从树的根到一个结点的路径长度与该结点上权值的乘积,称为该结点的**带权路径长度**
   - 树中所有叶结点的带权路径长度之和称为该树的带权路径长度,记为$$WPL=\sum_{i=1}^nw_il_i$$其中:$w_i$ 为二叉树第 $i$ 个叶结点的权值,$l_i$ 为从根结点到第 $i$ 个叶结点的路径长度
 
-对于给定一组具有确定权值的叶结点,可以构造出不同的二叉树,其中,**WPL 最小的二叉树**称为**霍夫曼树(Huffman Tree)** 也称最优二叉树.
-对于霍夫曼树来说,其叶结点权值越小,离根越远,叶结点权值越大,离根越近
+对于给定一组具有确定权值的叶结点,可以构造出不同的二叉树,其中,**WPL 最小的二叉树**称为**哈夫曼树(Huffman Tree)** 也称最优二叉树.
+对于哈夫曼树来说,其叶结点权值越小,离根越远,叶结点权值越大,离根越近
 
 ```c++{.line-numbers}
 typedef struct HNode
@@ -715,7 +715,7 @@ typedef struct HNode
 } *Htree;
 
 int getWPL(Htree root, int len)
-{ // 递归实现,对于已经建好的霍夫曼树,求 WPL
+{ // 递归实现,对于已经建好的哈夫曼树,求 WPL
     if (root == NULL)
         return 0;
     else
@@ -731,7 +731,7 @@ int getWPL(Htree root, int len)
     }
 }
 int getWPL(int arr[], int n)
-{// 对于未建好的霍夫曼树,直接求其 WPL
+{// 对于未建好的哈夫曼树,直接求其 WPL
     priority_queue<int, vector<int>, greater<int>> huffman; // 小根堆
     for (int i = 0; i < n; i++)
         huffman.push(arr[i]);
@@ -758,7 +758,7 @@ int getWPL(int arr[], int n)
 1. **初始化**:由给定的 $n$ 个权值构造 $n$ 棵只有一个根节点的二叉树,得到一个二叉树集合 $F$
 2. **选取与合并**:从二叉树集合 $F$ 中选取根节点权值 **最小的两棵** 二叉树分别作为左右子树构造一棵新的二叉树,这棵新二叉树的根节点的权值为其左、右子树根结点的权值和
 3. **删除与加入**:从 $F$ 中删除作为左、右子树的两棵二叉树,并将新建立的二叉树加入到 $F$ 中
-4. 重复 2、3 步,当集合中只剩下一棵二叉树时,这棵二叉树就是霍夫曼树
+4. 重复 2、3 步,当集合中只剩下一棵二叉树时,这棵二叉树就是哈夫曼树
 
 <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240421155326.png" width = 80%/></div>
 
@@ -841,10 +841,10 @@ Htree createHuffmanTree(int arr[], int n)
 在进行二进制编码时,假设所有的代码都等长,那么表示 $n$ 个不同的字符需要 $\left \lceil \log_2 n \right \rceil$ 位,称为 **固定长度编码**.
 如果每个字符的 **使用频率相等**,那么等长编码无疑是空间效率最高的编码方法,而如果字符出现的频率不同,则可以让频率高的字符采用尽可能短的编码,频率低的字符采用尽可能长的编码,来构造出一种 **可变长度编码**,从而获得更好的空间效率.
 在设计不等长编码时,要考虑解码的唯一性,如果一组编码中任一编码都不是其他任何一个编码的前缀,那么称这组编码为 **前缀编码**,其保证了编码被解码时的唯一性.
-霍夫曼树可用于构造 **最短的前缀编码**,即 **霍夫曼编码(Huffman Code)**,其构造步骤如下：
+哈夫曼树可用于构造 **最短的前缀编码**,即 **霍夫曼编码(Huffman Code)**,其构造步骤如下：
 
 1. 设需要编码的字符集为：$d_1,d_2,\dots,d_n$,他们在字符串中出现的频率为：$w_1,w_2,\dots,w_n$.
-2. 以 $d_1,d_2,\dots,d_n$ 作为叶结点,$w_1,w_2,\dots,w_n$ 作为叶结点的权值,构造一棵霍夫曼树.
+2. 以 $d_1,d_2,\dots,d_n$ 作为叶结点,$w_1,w_2,\dots,w_n$ 作为叶结点的权值,构造一棵哈夫曼树.
 3. 规定哈夫曼编码树的左分支代表 $0$,右分支代表 $1$,则从根结点到每个叶结点所经过的路径组成的 $0$、$1$ 序列即为该叶结点对应字符的编码.
 <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240421160826.png" width = 30%/></div>
 
@@ -905,8 +905,10 @@ void huffmanCoding(Htree root, int len, int arr[])
 ### 简介
 
 - 并查集是一种树形数据结构,经常用于处理一些集合之间的操作,例如元素查找、集合合并等等
+- 并查集是双亲表示法存储的树
 - 不同集合在并查集中以不同的树来表示一般每棵树的根节点会作为当前集合的代表
 - 想要查询两个元素是不是在同一集合里,需要比较两个元素所在集合的代表元是否相同即可
+- 除去上述查询和合并操作外,并查集还有如下应用:最小生成树算法中的$Kruskal$(并查集,$Kruskal$重构树的思维方式是很类似的，他们都能用于处理与连通性有关的问题)和最近公共祖先中的$Tarjan$算法是基于并查集的算法
 
 ### 基本操作
 
@@ -1003,6 +1005,16 @@ void Union(int x, int y)
         dep[fy]++;
 }
 ```
+
+### $DSU$ 复杂度分析
+
+- 时间复杂度:同时使用路径压缩和启发式合并之后，并查集的每个操作平均时间仅为 $O(\alpha(n))$，其中 $\alpha$ 为阿克曼函数的反函数，其增长极其缓慢，也就是说其单次操作的平均运行时间可以认为是一个很小的常数。
+  [Ackermann 函数](https://en.wikipedia.org/wiki/Ackermann_function) $A(m, n)$ 的定义是这样的：
+  $$A(m, n) = \begin{cases}n+1&\text{if }m=0\\A(m-1,1)&\text{if }m>0\text{ and }n=0\\A(m-1,A(m,n-1))&\text{otherwise}\end{cases}$$
+  而反 $Ackermann$ 函数 $\alpha(n)$ 的定义是阿克曼函数的反函数，即为最大的整数 $m$ 使得 $A(m, m) \leqslant n$。
+  时间复杂度的证明:[OI-Wiki DSU 时间复杂度证明](https://oi-wiki.org/ds/dsu-complexity/)
+
+- 空间复杂度:显然为 $O(n)$
 
 ### 扩展操作
 
